<resources>
    <string name="app_name">Iba</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_code">User Code</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">logo</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logout">Logout</string>
    <string name="tag_mapping">Rfid Mapping</string>
    <string name="asset_view">Asset View</string>
    <string name="asset_inward">Asset Inward</string>
    <string name="asset_outward">Asset Outward</string>
    <string name="audit">Audit</string>
    <string name="asset_search">Asset Search</string>
    <string name="put_away">Put Away</string>
    <string name="material_view">Material View</string>
    <string name="rack_wise_info">Rack Wise Info</string>
    <string name="re_allocate">ReAllocate</string>
    <string name="pickList">Pick List</string>
    <string name="asset_serial_no">Asset Serial Number</string>
    <string name="sub_asset_no">Sub Asset No</string>
    <string name="material_name">Part Name</string>
    <string name="material_code">Part Code</string>
    <string name="quantity">Quantity</string>
    <string name="inward_Date">Inward Date</string>
    <string name="packingstd">Packing Standard</string>
    <string name="asset_name">Asset Name</string>
    <string name="asset_code">Asset Code</string>
    <string name="sap_asset_name">SAP Asset Name</string>
    <string name="location">Location</string>
    <string name="department">Department</string>
    <string name="department_code">Department Code</string>
    <string name="department_name">Department Name</string>
    <string name="cost_centre">Cost Centre</string>
    <string name="group">Group</string>
    <string name="category">Category</string>
    <string name="protocol">Protocol</string>
    <string name="port">Port</string>
    <string name="ip_Address">IP Address</string>
    <string name="domain_name">Domain Name</string>
    <string name="asset_condition">Asset Condition</string>
    <string name="asset_life">Asset Life</string>
    <string name="purchase_cost">Purchase Cost</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="register_date">Register Date</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_rfid">Scan RFID</string>
    <string name="in_progress">In progress</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="audit_id">Audit Id</string>
    <string name="audit_code">Audit Code</string>
    <string name="audit_code_colan">Audit Code : </string>
    <string name="Audit_In_Charge">Audit In-Charge</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="completion">Completion %</string>
    <string name="Completion">Completion</string>
    <string name="gate_pass_no">Gate Pass No</string>
    <string name="verify_status">Verify Status</string>
    <string name="scan_barcode_qr_code">Scan Barcode / QR Code</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="remapping">Remapping</string>
    <string name="new_mapping">New Mapping</string>
    <string name="tag_code">Tag Code</string>
    <string name="tag_no">Tag No</string>
    <string name="enter_asset_sr_no">Enter Asset Sr.No</string>
    <string name="start_search">Start Search</string>
    <string name="asset_was_successfully_found">Asset was successfully Found</string>
    <string name="view_asset">View Asset</string>
    <string name="scanned_qty">Scanned Qty</string>
    <string name="scanned_quantity">Scanned Quantity</string>
    <string name="system_quantity">System Quantity</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="previous_gate_pass_no">Previous Gate Pass No</string>
    <string name="address">Address</string>
    <string name="service_station_vendor_name">Service Station / Vendor Name</string>
    <string name="reason">Reason</string>
    <string name="incharge">Incharge</string>
    <string name="asset_sr_no">Asset Sr.No</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="last_gate_pass_no">Last Gate Pass No</string>
    <string name="out_date">Out Date</string>
    <string name="ok">Ok</string>
    <string name="not_ok">Not Ok</string>
    <string name="scan_id">Scan Id</string>
    <string name="placeof_asset">Place Of Asset</string>
    <string name="placeof_asset_name">Place Of Asset Name</string>
    <string name="remarks">Remarks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">RFID Settings</string>
    <string name="rapid_read">Rapid Read</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string-array name="options_array">
        <item>Home</item>
        <item>Rapid Read</item>
        <item>Inventory</item>
        <item>Locate Tag</item>
        <item>Settings</item>
        <item>Tag Write</item>
        <item>Pre Filters</item>
        <item>Readers List</item>
        <item>About</item>
        <item>Profiles</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">INSTANT VISIBLITY INTO YOUR OPERATIONS</string>
    <string name="nav_header_desc">123RFID Mobile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_none">None</string>
    <string name="action_user">User</string>
    <string name="action_reserved">Reserved</string>
    <string name="action_tid">TID</string>
    <string name="action_epic">EPC</string>
    <string name="title_activity_antenna_settings">Antenna</string>
    <string name="title_activity_readers_list">Readers List</string>
    <string name="title_activity_application_settings">Application</string>
    <string name="title_activity_singulation_control">Singulation Control</string>
    <string name="unique_tag_settings">Unique Tag Settings</string>
    <string name="unique_tag_reads">Report Unique tags</string>
    <string name="report_unique_tags">Report Unique tags</string>
    <string-array name="link_profile_array">
        <item>RF Mode 1</item>
        <item>RF Mode 2</item>
        <item>RR Mode 1</item>
        <item>RR Mode 2</item>
        <item>RS Mode 1</item>
        <item>RS Mode 2</item>
    </string-array>
    <string-array name="session_array">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="tag_population_array">
        <item>30</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
    </string-array>
    <string-array name="inventory_state_array">
        <item>STATE A</item>
        <item>STATE B</item>
        <item>AB FLIP</item>
    </string-array>
    <string-array name="sl_flags_array">
        <item>ALL</item>
        <item>DEASSERTED</item>
        <item>ASSERTED</item>
    </string-array>
    <string-array name="inv_menu_items">
        <item>None</item>
        <item>User</item>
        <item>Reserved</item>
        <item>TID</item>
        <item>EPC</item>
        <item>TAMPER</item>
    </string-array>
    <string-array name="acess_read_write_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
        <item>ACCESS PASSWORD</item>
        <item>KILL PASSWORD</item>
    </string-array>
    <string-array name="acess_lock_memory_bank_array">
        <item>EPC</item>
        <item>ACCESS PWD</item>
        <item>KILL PWD</item>
        <item>TID</item>
        <item>USER</item>
        <item>ALL</item>
    </string-array>
    <string-array name="acess_lock_privilege_array">
        
        <item>Read and Write</item>
        <item>Permanent Lock</item>
        <item>Permanent Unlock</item>
        <item>Unlock</item>
    </string-array>
    <string-array name="pre_filter_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="pre_filter_action_array">
        <item>INV A NOT INV B OR ASRT SL NOT DSRT SL</item>
        <item>INV A OR ASRT SL</item>
        <item>NOT INV B OR NOT DSRT SL</item>
        <item>INV A2BB2A NOT INV A OR NEG SL NOT ASRT SL</item>
        <item>INV B NOT INV A OR DSRT SL NOT ASRT SL</item>
        <item>INV B OR DSRT SL</item>
        <item>NOT INV A OR NOT ASRT SL</item>
        <item>NOT INV A2BB2A OR NOT NEG SL</item>
    </string-array>
    <string-array name="pre_filter_target_options">
        <item>SESSION S0</item>
        <item>SESSION S1</item>
        <item>SESSION S2</item>
        <item>SESSION S3</item>
        <item>SL FLAG</item>
    </string-array>
    <string-array name="pre_filter_tag_id_array">
        <item>AD9915404190725965400412</item>
        <item>AD9915404190725965400413</item>
        <item>AD9915404190725965400414</item>
        <item>AD9915404190725965400415</item>
        <item>AD9915404190725965400416</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_access_operations">TagWriteActivity</string>
    <string-array name="start_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Periodic</item>
    </string-array>
    <string-array name="stop_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Duration</item>
        <item>Tag Observation</item>
        <item>N attempts</item>
    </string-array>
    <string-array name="beeper_volume_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="pie_array">
        <item>1500</item>
        <item>2000</item>
    </string-array>
    <string-array name="pie0_array">
        <item>0</item>
    </string-array>
    <string-array name="pie_array_668">
        <item>668</item>
    </string-array>
    <string-array name="pie_array_2000">
        <item>2000</item>
    </string-array>
    <string-array name="tari_array">
        <item>6250</item>
        <item>12500</item>
        <item>14600</item>
        <item>16700</item>
        <item>18800</item>
        <item>20900</item>
        <item>23000</item>
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_625">
        <item>6250</item>
    </string-array>
    <string-array name="tari_array_668">
        <item>668</item>
    </string-array>
    <string-array name="tari0_array">
        <item>0</item>
    </string-array>
    <string-array name="tari_array_12_25">
        <item>12500</item>
        <item>14600</item>
        <item>16700</item>
        <item>18800</item>
        <item>20900</item>
        <item>23000</item>
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_18_25">
        <item>18800</item>
        <item>20900</item>
        <item>23000</item>
        <item>25000</item>
    </string-array>
    <string name="status">Status</string>
    <string name="RackCode">Location Code</string>
    <string name="materialview">Part View</string>
</resources>