<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="materialview"
            type="com.zebra.demo.viewmodel.PutAwayViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/centerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/put_away"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/ewrp_rack"
            style="@style/EditControlWrapperStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/centerText"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/elbl_rack"
                style="@style/TextInputLayoutStyle"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/ectl_rack"
                    style="@style/AutoCompleteTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/RackCode"
                    android:text="@{materialview.selectedRackDetail}" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_rfid"
            android:layout_margin="20dp"
            android:layout_below="@id/ewrp_rack"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</layout>
